--- a/loginHTML/login.html
+++ b/loginHTML/login.html
@@ -15,6 +15,8 @@
         <input type="password" name="password" required><br><br>
         
         <button type="submit">Login</button>
+        
+        <p>Don't have an account? <a href="register.html">Register here</a></p>
     </form>
 </body>
 </html>
